--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    Here shows about page!
-</body>
-</html>
+{% extends 'base.html' %}
+{% block title %}
+<title>AboutPage | Pokemon World</title>
+{% endblock %}
+{% block content %}
+This page shows information about the website. 
+Here is the super user account for the website:Satoshi Tajiri
+username:SATOSHI TAJIRI
+password:SATOSHI TAJIRI
+{% endblock %}
