--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    This is home page! thanks!
-</body>
-</html>
+{% extends 'base.html' %}
+{% block title %}
+<title>HomePage | Pokemon World</title>
+{% endblock %}
+{% block content %}
+{% endblock %}
