initail detail page

--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block title %}
-<title>AboutPage | Pokemon World</title>
+<title>{{title}} | Pokemon World</title>
 {% endblock %}
 {% block content %}
 This page shows information about the website. 
