--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -8,8 +8,9 @@
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
-  />    {% block title %}
-    <title>Pokemon World</title>
+  />    
+
+  {% block title %}
 {% endblock %}
 </head>
 
