--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block title %}
-<title>HomePage | Pokemon World</title>
+<title>{{title}} | Pokemon World</title>
 {% endblock %}
 {% block content %}
 {% endblock %}
