--- a/main_app/templates/pokemons/pokemons_view.html
+++ b/main_app/templates/pokemons/pokemons_view.html
@@ -1,12 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+{% extends 'base.html' %}
+{% block title %}
+<title>{{title}} | Pokemon World</title>
+{% endblock %}
+{% block content %}
 <body>
-    here you can view pokemons
+   <h1>Pockets(onlys 6 here)</h1>
+   {% for pokemon in pokemons %}
+    <div class="card">
+        <div class="card-content">
+            <a href="{% url 'pokemon_detail' pokemon.id %}">
+                <img src="{{ pokemon.img }}" alt="{{pokemon.name}}'s" width="100" height="100">
+            </a>
+                <div class="card-title">
+                <p>Name: {{ pokemon.name }} </p>
+                <p>Level: {{ pokemon.level }}</p>   
+          </div>
+    </div>
+</div>
+    {% endfor %}
+    <h1>Box</h1>
+    <div class="card">
+        Box(at most 30 pokemons here)
+    </div>
 </body>
-</html>
+{% endblock %}
