--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -20,6 +20,9 @@
             <a class="left brand-logo" href="{% url 'home' %}">Pokemon World</a>
           <ul class="right">
             <li>
+              <a href="{% url 'fetch_pokemons' %}">Fetch Pokemons</a>
+          </li>
+            <li>
                 <a href="{% url 'about' %}">About</a>
             </li>
             <li>
