initial login and signup page

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -28,6 +28,9 @@
             <li>
                 <a href="{% url 'pokemons_view' %}">View Pokemons</a>
             </li>
+            <li>
+              <a href="{% url 'pokemon_create' %}">Create Pokemon</a>
+            </li>
         </ul>
         </nav>
     </header>
