compledted login and signup

--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -5,6 +5,6 @@
 {% block content %}
 This page shows information about the website. 
 Here is the super user account for the website:Satoshi Tajiri
-username:SATOSHI TAJIRI
-password:SATOSHI TAJIRI
+username:SATOSHI_TAJIRI
+password:ICreatePokemon
 {% endblock %}
