--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -32,6 +32,14 @@
             <li>
               <a href="{% url 'pokemon_create' %}">Create Pokemon</a>
             </li>
+            <li>
+              <a href="{% url  'login' %}">Login</a>
+            </li>
+            <li>
+              <a href="{% url  'logout' %}">Logout</a>
+            </li>
+            <li>
+              <a href="{% url  'signup' %}">Signup</a>
         </ul>
         </nav>
     </header>
