added Pokemon owned_by feature

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -45,6 +45,9 @@
     </header>
     <main class="container">{% block content%} {%endblock%}</main>
     <footer class="page-footer">
+      <p>Super accoutn for testing: </p>
+      <p>username: SATOSHI_TAJIRI</p>
+        <p>pwd: ICreatePokemon</p>
       <p>Copyright &copy; All Rights Reserved Pokemon World 2023</p>
     </footer> 
 </body>
