--- a/main_app/templates/pokemons/pokemon_confirm_delete.html
+++ b/main_app/templates/pokemons/pokemon_confirm_delete.html
@@ -1,11 +1,13 @@
 {% extends 'base.html' %} {% block title %}
-<title>Are you sure you want to delete {{pokemon.name}}</title>
+<title>Release {{pokemon.name}}</title>
 {% endblock %} {% block content %}
-<h4>Are you sure you want to delete {{pokemon.name}} ?</h4>
-Here shows the details of the pokemon
+<h4>Are you sure you want to Release {{pokemon.name}} ?</h4>
+Here shows the details of the pokemon...
+{{pokemon.name}} has been with you since {{pokemon.created_at}}.
+It is xxxx days. You can get it back by going to the pokemon center.
 <form method="POST">
   {% csrf_token %}
-  <input type="submit" value="Yes - Delete {{pokemon.name}}" class="btn" />
-  <a href="{% url 'pokemon_detail' pokemon.id %}" class="btn blue">No, cancel</a>
+  <input type="submit" value="Yes - Release {{pokemon.name}}" class="btn" />
+  <a href="{% url 'pokemon_detail' pokemon.id %}" class="btn blue">No!</a>
 </form>
 {% endblock %}
