--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -10,7 +10,6 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
   />    
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    
   {% block title %}
 {% endblock %}
 </head>
@@ -23,6 +22,7 @@
             <li>
               <a href="{% url 'about' %}">About</a>
           </li>
+          {% if user.is_authenticated %}
             <li>
               <a href="{% url 'fetch_pokemons' %}">Fetch Pokemons</a>
           </li>
@@ -30,17 +30,21 @@
             <li>
                 <a href="{% url 'pokemons_view' %}">View Pokemons</a>
             </li>
+            
             <li>
               <a href="{% url 'pokemon_create' %}">Create Pokemon</a>
             </li>
             <li>
+              <a href="{% url  'logout' %}">Logout</a>
+            </li>
+            {%else%}
+            
+            <li>
               <a href="{% url  'login' %}">Login</a>
             </li>
             <li>
-              <a href="{% url  'logout' %}">Logout</a>
-            </li>
-            <li>
               <a href="{% url  'signup' %}">Signup</a>
+              {% endif %}
         </ul>
         </nav>
     </header>
