initial store.html

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -22,6 +22,9 @@
             <li>
               <a href="{% url 'about' %}">About</a>
           </li>
+          <li>
+            <a href="{% url 'store' %}">Store</a>
+        </li>
           {% if user.is_authenticated %}
             <li>
               <a href="{% url 'fetch_pokemons' %}">Fetch Pokemons</a>
