--- a/main_app/templates/store/store_view.html
+++ b/main_app/templates/store/store_view.html
@@ -3,5 +3,10 @@
 <title> {{title}}| Pokemon World</title>
 {% endblock %}
 {% block content %}
-This is store!
+{% for item in items %}
+<div class="col s6">
+    <img src="{{item.img}}" alt="{{item.name}}'s image" width="100" height="100">
+    <p>Name: {{item.name}}</p>
+    <p>Cost: {{item.cost}}</p>
+{% endfor %}
 {% endblock %}
