initial player profile

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -38,6 +38,9 @@
               <a href="{% url 'pokemon_create' %}">Create Pokemon</a>
             </li>
             <li>
+              <a href="{% url 'player_create' %}">Create Player</a>
+            </li>
+            <li>
               <a href="{% url  'logout' %}">Logout</a>
             </li>
             {%else%}
