completed purchased stone

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -41,6 +41,9 @@
               <a href="{% url 'player_create' %}">Create Player</a>
             </li>
             <li>
+              <a href="{% url 'player_profile' %}">Profile</a>
+            </li>
+            <li>
               <a href="{% url  'logout' %}">Logout</a>
             </li>
             {%else%}
