completed home about page

--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -3,8 +3,35 @@
 <title>{{title}} | Pokemon World</title>
 {% endblock %}
 {% block content %}
-This page shows information about the website. 
-Here is the super user account for the website:Satoshi Tajiri
-username:SATOSHI_TAJIRI
-password:ICreatePokemon
+<header>
+    <div class="container">
+    <h1 class="text-center">How to play ?</h1>
+    </div>
+  </header>
+  <div class="container">
+    <h2 class="page-header">Step 1: Signup</h2>
+    <div class="row">
+      <div class="col-xs-12">
+        Signup and Create your player profile
+    <h2 class="page-header">Step 2: Fetch Pokemon</h2>
+    <div class="row">
+      <div class="col-xs-12">Click "Fetch Pokemon" to capture a Pokemon</div>
+    </div>  
+
+    <h2 class="page-header">Step 3: View Pokemon</h2>
+    <div class="row">
+      <div class="col-xs-12">Click "View Pokemon" to view your Pokemon</div>
+    </div>
+
+    <h2 class="page-header">Step 4: Interate with Pokemon</h2>
+    <div class="row">
+      <div class="col-xs-12"><ul>
+        <li>View Pokemon details
+            <li>Bring Pokemon with you</li>
+            <li>Storage Pokemon</li>
+            <li>Release Pokemon</li>
+            <li>Evolve Pokemon</li>
+    </ul></div> </div>
+    
 {% endblock %}
+
