--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -3,6 +3,10 @@
 <title>{{title}} | Pokemon World</title>
 {% endblock %}
 {% block content %}
-This is home
-
+<h1>Welcome to Pokemon World</h2>
+<a href="{% url 'about' %}"
+  ><img class="home-img"
+    src="https://www.pockettactics.com/wp-content/sites/pockettactics/2023/01/Pok%C3%A9mon-wallpapers-5.jpg"
+  />
+</a>
 {% endblock %}
