--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -13,14 +13,14 @@
     <div class="row">
       <div class="col-xs-12">
         Signup and Create your player profile
-    <h2 class="page-header">Step 2: Fetch Pokemon</h2>
+    <h2 class="page-header">Step 2: Fetch Pokemons</h2>
     <div class="row">
-      <div class="col-xs-12">Click "Fetch Pokemon" to capture a Pokemon</div>
+      <div class="col-xs-12">Click "Fetch Pokemons" to capture a Pokemon</div>
     </div>  
 
-    <h2 class="page-header">Step 3: View Pokemon</h2>
+    <h2 class="page-header">Step 3: View Pokemons</h2>
     <div class="row">
-      <div class="col-xs-12">Click "View Pokemon" to view your Pokemon</div>
+      <div class="col-xs-12">Click "View Pokemons" to view your Pokemon</div>
     </div>
 
     <h2 class="page-header">Step 4: Interate with Pokemon</h2>
