--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -9,4 +9,7 @@
     src="https://www.pockettactics.com/wp-content/sites/pockettactics/2023/01/Pok%C3%A9mon-wallpapers-5.jpg"
   />
 </a>
+<h2>
+  Click the image above to learn more!
+</h2>
 {% endblock %}
