--- a/main_app/templates/player/player_form.html
+++ b/main_app/templates/player/player_form.html
@@ -5,9 +5,7 @@
 {% block content %}
 <form action="{% url 'player_create' %}" method="POST">
   {% csrf_token %}
-  <table>
-    {{ form.as_table }}
-  </table>
+  {{ form.as_p }}
   <input type="submit" value="Submit" class="btn blue" />
 </form>
 {% endblock %}
