--- a/main_app/templates/player/player_profile.html
+++ b/main_app/templates/player/player_profile.html
@@ -4,17 +4,32 @@
 {% endblock %}
 {% block content %}
 <h1>{{player.name}}'s profile</h1>
-<img src="{{player.img}}" alt="{{player.name}}'s image" width="300" height="300">
-<p>Money: {{player.money}}</p>
-<p>Pokemon:
-{% for pokemon in pokemons_in_pocket %}
-<a href="{% url 'pokemon_detail' pokemon.id %}">
-    <img src="{{pokemon.img}}" alt="{{pokemon.name}}'s image" width="50" height="50"><span>{{pokemon.name}}</span></a>
-{% endfor %}</p>
+<div class="row">
+    <div class="col s6">
+        <img class="player-img" src="{{player.img}}" alt="{{player.name}}'s image" width="300" height="300">
+        <p>Money: {{player.money}}</p>
+    </div>
+    <div class="col s6">
+        <div class="row">
+            {% for pokemon in pokemons_in_pocket %}
+            <div class="col s4">
+                <a href="{% url 'pokemon_detail' pokemon.id %}">
+                    <img class="player-pokemon-img" src="{{pokemon.img}}" alt="{{pokemon.name}}'s image">
+                </a>
+                <p>{{pokemon.name}}</p>
+            </div>
+            {% endfor %}
+        </div>
+    </div>
+</div>
+
 <p>Items:
-{% for item, qty in items.items %}
-   <span>{{item}}: {{qty}}</span></a>
-{% endfor %}
-</p>
-</p>
+    <div class="row">
+        {% for item in items %}
+        <div class="col s3">
+            <img class="player-item-img" src="{{item.img}}" alt="{{item.name}}'s image">
+            <p>{{item.name}}:({{item.qty}})</p>
+        </div>
+        {% endfor %}
+</div>
 {% endblock %}
