--- a/main_app/templates/store/store_view.html
+++ b/main_app/templates/store/store_view.html
@@ -4,16 +4,20 @@
 {% endblock %}
 {% block content %}
 <h2>Evolution</h2>
+<div class="row">
 {% for item in items %}
-
+<div class="col s4 card item-card">
     <form action="{% url 'store_purchase' %}" method="post">
     {% csrf_token %}
     <img src="{{item.img}}" alt="{{item.name}}'s image" width="50" height="50">
     <p>{{item.name}} - ${{item.cost}}</p>
     <input type="hidden" name="name" value="{{item.name}}">
     <input type="hidden" name="cost" value="{{item.cost}}">
+    {% if user.is_authenticated %}
     <button type="submit">Purchase</button>
+    {% endif %}
     </form>
-
+</div>
 {% endfor %}
+</div>
 {% endblock %}
