--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -9,7 +9,7 @@ p.detail-font{
 font-size:16px;
 }
 .page-footer {
-    position: relative;
+    position: fixed;
     bottom: 0;
     width: 100%;
     padding: 0;
