--- a/main_app/templates/store/store_view.html
+++ b/main_app/templates/store/store_view.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 {% block title %}
 <title> {{title}} | Pokemon World</title>
 {% endblock %}
@@ -7,9 +7,9 @@
 <div class="row">
 {% for item in items %}
 <div class="col s4 card item-card">
-    <form action="{% url 'store_purchase' %}" method="post">
+    <form action="{% url "store_purchase" %}" method="post">
     {% csrf_token %}
-    <img src="{{item.img}}" alt="{{item.name}}'s image" width="50" height="50">
+    <img src="{{item.img}}" alt="{{item.name}}"s image" width="50" height="50">
     <p>{{item.name}} - ${{item.cost}}</p>
     <input type="hidden" name="name" value="{{item.name}}">
     <input type="hidden" name="cost" value="{{item.cost}}">
