css bugs +session

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -64,11 +64,13 @@
         </ul>
         </nav>
     </header>
-    <main class="container">{% block content%} {%endblock%}</main>
+    <main class="">{% block content%} {%endblock%}
+      
+    </main>
+    
     <footer class="page-footer">
       <p>Super account for testing ID: SATOSHI_TAJIRI PWD: ICreatePokemon</p>
       <p>Copyright &copy; All Rights Reserved Pokemon World 2023</p>
     </footer>
-     
 </body>
 </html>
