--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -5,7 +5,10 @@ body {
     box-sizing:border-box;
     font-family: 'Cute Font', cursive;
   }
-
+main{
+  text-align: center;
+  margin-bottom: 100px;
+}
 p.detail-font{
 font-size:16px;
 }
@@ -13,19 +16,13 @@ font-size:16px;
     position: fixed;
     bottom: 0;
     width: 100%;
-    padding: 0;
     text-align: center;
   }
-div.row{
-  margin-bottom:75px;
-}
 .home-img {
     display: flex;
-    width: 100%;
-    height: 75%;
-    border: 25px;
-    justify-content: center;
-    align-items: center;
+    width: 60%;
+    display: block;
+    margin:0 auto;
   }
   img.player-img {
     width: 100%;
@@ -37,8 +34,8 @@ div.row{
 
  .pokemon-img, .player-pokemon-img {
     display: flex;
-    width: 100%;
-    height: 100%;
+    width: 80%;
+    height: 80%;
     justify-content: center;
     align-items: center;
   }
